[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4"
actix-web-actors = "4.2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
rand = "0.8.0"
sha2 = "0.10.8"
env_logger = "0.10.2"
